Move site files to root for GitHub Pages v3

--- a/News_and_Events.html
+++ b/News_and_Events.html
@@ -38,11 +38,11 @@
               </div>
 
               <div style="height: 39px; width: 50px;  height: 39px; left: 614px; position: absolute; top: 5px; width: 50px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-                 <a href="Carlos_F._Sopuerta_Webpage.html" title="Carlos_F._Sopuerta_Webpage.html"><img src="News_and_Events_files/profess026.jpg" alt="" style="border: none; height: 40px; width: 50px; " /></a>
+                 <a href="index.html" title="Carlos_F._Sopuerta_Webpage.html"><img src="News_and_Events_files/profess026.jpg" alt="" style="border: none; height: 40px; width: 50px; " /></a>
               </div>
 
               <div style="height: 39px; width: 50px;  height: 39px; left: 36px; position: absolute; top: 5px; width: 50px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-                 <a href="Carlos_F._Sopuerta_Webpage.html" title="Carlos_F._Sopuerta_Webpage.html"><img src="News_and_Events_files/profess026_1.jpg" alt="" style="border: none; height: 40px; width: 50px; " /></a>
+                 <a href="index.html" title="Carlos_F._Sopuerta_Webpage.html"><img src="News_and_Events_files/profess026_1.jpg" alt="" style="border: none; height: 40px; width: 50px; " /></a>
               </div>
            </div>
            <div style="margin-left: 0px; position: relative; width: 700px; z-index: 5; " id="body_layer">
@@ -57,7 +57,10 @@
               <div id="id2" style="height: 374px; left: 35px; position: absolute; top: 7px; width: 630px; z-index: 1; " class="style_SkipStroke_2">
                  <div class="text-content graphic_textbox_layout_style_default_External_630_374" style="padding: 0px; ">
                     <div class="graphic_textbox_layout_style_default">
-                       <ol>
+                       <ol>			
+												 <li style="line-height: 20px; margin-top: -1px; padding-left: 19px; text-indent: -19px; " class="full-width">
+														<p style="text-indent: -19px; " class="paragraph_style_1"><span style="position: relative; top: 1px; " class="Bullet"><img src="News_and_Events_files/bullet_ball-chrome.png" alt="Bullet" style="height: 13px; width: 10px; " /></span><span style="width: 9px; " class="inline-block"></span><span style="line-height: 19px; " class="style_1">25.January.2024:&nbsp;</span><span style="line-height: 14px; " class="style_3"> </span><a href="https://www.esa.int/Science_Exploration/Space_Science/Capturing_the_ripples_of_spacetime_LISA_gets_go-ahead" title="IGWM2020" style="line-height: 14px; " class="style_4">LISA Mission is adopted by ESA and enters the implementation phase!</span><span style="line-height: 17px; " class="style_5"><br /></span></p>
+												 </li>
                           <li style="line-height: 20px; margin-top: -1px; padding-left: 19px; text-indent: -19px; " class="full-width">
                              <p style="text-indent: -19px; " class="paragraph_style_1"><span style="position: relative; top: 1px; " class="Bullet"><img src="News_and_Events_files/bullet_ball-chrome.png" alt="Bullet" style="height: 13px; width: 10px; " /></span><span style="width: 9px; " class="inline-block"></span><span style="line-height: 19px; " class="style_1">19-20.October.2020:&nbsp;</span><span style="line-height: 14px; " class="style_3"> </span><a href="https://indico.ifae.es/event/885/overview" title="IGWM2020" style="line-height: 14px; " class="style_4">Iberian Gravitational Wave Meeting Online</a><span style="line-height: 14px; " class="style_3">, organized by the ICE and IFAE.</span><span style="line-height: 17px; " class="style_5"><br /></span></p>
                           </li>
