--- a/index.html
+++ b/index.html
@@ -209,21 +209,10 @@
 
 
 
-            <div style="height: 56px; width: 38px;  height: 56px; left: 312px; position: absolute; top: 40px; width: 38px; z-index: 1; " class="tinyText style_SkipStroke">
-              <a href="http://www.csic.es/" title="http://www.csic.es/"><img src="Carlos_F._Sopuerta_Webpage_files/CSIC_Logo.png" alt="" style="border: none; height: 57px; width: 38px; " /></a>
+            <div style="height: 60px; width: 200px; left:50px; position: absolute; top: 30px; width: 200px; z-index: 1; " class="tinyText style_SkipStroke">
+              <a href="http://www.ice.csic.es/" title="http://www.ice.csic.es/"><img src="Carlos_F._Sopuerta_Webpage_files/ICE-CSIC LOGOTIPO 25 ANYOS.png" alt="" style="border: none; height: 80px; width: 600px; " /></a>
             </div>
 
-
-
-            <div style="height: 60px; width: 129px;  height: 60px; left: 521px; position: absolute; top: 38px; width: 129px; z-index: 1; " class="tinyText style_SkipStroke">
-              <a href="http://www.ieec.cat/english/" title="http://www.ieec.cat/english/"><img src="Carlos_F._Sopuerta_Webpage_files/IEECLogoPositiu-sense-nom.jpg" alt="" style="border: none; height: 57px; width: 145px; " /></a>
-            </div>
-
-
-
-            <div style="height: 64px; width: 108px;  height: 64px; left: 29px; position: absolute; top: 36px; width: 108px; z-index: 1; " class="tinyText style_SkipStroke">
-              <a href="http://www.ice.csic.es/" title="http://www.ice.csic.es/"><img src="Carlos_F._Sopuerta_Webpage_files/ICE.jpeg" alt="" style="border: none; height: 57px; width: 110px; " /></a>
-            </div>
           </div>
         </div>
       </div>
